--- a/package.json
+++ b/package.json
@@ -14,23 +14,32 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/native": "^6.0.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.21",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
+    "expo-modules": "^0.0.0",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "is-arrayish": "^0.3.2",
+    "pod-install": "^0.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.4.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
