--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-bouncy-checkbox": "^4.0.1",
+    "react-native-elements": "^3.4.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-modern-datepicker": "^1.0.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
