--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "~51.0.21",
+    "expo": "^51.0.21",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-modules": "^0.0.0",
@@ -27,6 +29,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "install": "^0.13.0",
     "is-arrayish": "^0.3.2",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
@@ -34,6 +37,7 @@
     "react-native": "0.74.3",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
