--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
