--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -42,6 +43,7 @@
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
