--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react-native-vector-icons": "^6.4.18",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.21",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
