--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "is-arrayish": "^0.3.2",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-bouncy-checkbox": "^4.0.1",
