--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "date-fns": "^3.6.0",
     "expo": "^51.0.21",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.14",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-modules": "^0.0.0",
@@ -49,6 +51,7 @@
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
