--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/lodash": "^4.17.7",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/xdate": "^0.8.35",
     "date-fns": "^3.6.0",
     "expo": "^51.0.21",
     "expo-barcode-scanner": "~13.0.1",
@@ -37,6 +39,7 @@
     "expo-web-browser": "~13.0.3",
     "install": "^0.13.0",
     "is-arrayish": "^0.3.2",
+    "lodash": "^4.17.21",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
@@ -60,7 +63,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "xdate": "^0.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
