--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/lodash": "^4.17.7",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/xdate": "^0.8.35",
+    "axios": "^1.7.2",
+    "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
     "expo": "^51.0.21",
     "expo-barcode-scanner": "~13.0.1",
@@ -37,9 +39,11 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "express": "^4.19.2",
     "install": "^0.13.0",
     "is-arrayish": "^0.3.2",
     "lodash": "^4.17.21",
+    "oracledb": "^6.6.0",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
@@ -76,5 +80,6 @@
     "typescript": "~5.3.3"
   },
   "private": true,
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610",
+  "proxy": "http://localhost:3000"
 }
