--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
@@ -28,6 +29,7 @@
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "expo": "^51.0.21",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.14",
@@ -43,6 +45,7 @@
     "install": "^0.13.0",
     "is-arrayish": "^0.3.2",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.9.14",
     "oracledb": "^6.6.0",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
