--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "oracledb": "^6.6.0",
     "pod-install": "^0.2.2",
     "react": "18.2.0",
-    "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
     "react-native-bouncy-checkbox": "^4.0.1",
@@ -71,6 +70,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "11",
     "react-navigation-stack": "^2.10.4",
     "xdate": "^0.8.3"
   },
