--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
     "oracledb": "^5.1.0"
   }
 }
