--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
-    "oracledb": "^5.1.0"
+    "oracledb": "^5.1.0",
+    "qrcode": "^1.5.4"
   }
 }
