--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
