--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "expo": "^51.0.21",
+    "expo-app-loading": "^2.1.1",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.14",
     "expo-font": "~12.0.9",
