--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/lodash": "^4.17.7",
@@ -31,14 +31,14 @@
     "body-parser": "^1.20.2",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "expo": "^51.0.21",
+    "expo": "~51.0.31",
     "expo-app-loading": "^2.1.1",
     "expo-barcode-scanner": "~13.0.1",
     "expo-camera": "~15.0.14",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-modules": "^0.0.0",
-    "expo-router": "~3.5.18",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -53,7 +53,7 @@
     "react": "18.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-calendars": "^1.1306.0",
     "react-native-dropdown-picker": "^5.4.6",
@@ -67,13 +67,13 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-qrcode-svg": "^6.3.2",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
-    "react-native-svg": "^15.4.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "11",
+    "react-native-webview": "13.8.6",
     "react-navigation-stack": "^2.10.4",
     "xdate": "^0.8.3"
   },
@@ -82,7 +82,7 @@
     "@types/react": "~18.2.45",
     "@types/react-native-modern-datepicker": "^1.0.5",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
